--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Write-Up [THM] 
+title: All Things Cyber 
 author: sudo-gigi
 email: gloryeziani@gmail.com-
 description: > # this means to ignore newlines until "baseurl:"
