--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: All Things Cyber 
 author: sudo-gigi
-email: gloryeziani@gmail.com-
+email: gloryeziani@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Collection of write-ups for THM, including complete path writeup, rooms and ctfs
 
