--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Collection of write-ups for THM, including complete path writeup, rooms and ctfs
 
 # social links
-twitter_username:  # DO NOT include the @ character, or else the build will fail!
+linkedin_username:  glory-eziani # DO NOT include the @ character, or else the build will fail!
 github_username:   sudo-gigi
 show_excerpts: false # set to false to remove excerpts on the homepage
 theme: minima
